Project/build/generated-src/antlr/main/comp2024/grammar/JavammParser.java
// Generated from comp2024/grammar/Javamm.g4 by ANTLR 4.5.3

    package pt.up.fe.comp2024;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class JavammParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		EQUALS=1, SEMI=2, LCURLY=3, RCURLY=4, LPAREN=5, RPAREN=6, LBRACKET=7, 
		RBRACKET=8, MUL=9, ADD=10, SUB=11, DIV=12, AND=13, LESS=14, VARARGS=15, 
		CLASS=16, INT=17, STRING=18, BOOLEAN=19, PUBLIC=20, IF=21, ELSE=22, WHILE=23, 
		TRUE=24, FALSE=25, THIS=26, RETURN=27, NOT=28, DOT=29, LENGTH=30, COMMA=31, 
		NEW=32, IMPORT=33, EXTENDS=34, STATIC=35, VOID=36, MAIN=37, COMMENT=38, 
		MULTILINE_COMMENT=39, INTEGER=40, ID=41, WS=42;
	public static final int
		RULE_program = 0, RULE_importDecl = 1, RULE_classDecl = 2, RULE_varDecl = 3, 
		RULE_type = 4, RULE_methodDecl = 5, RULE_param = 6, RULE_stmt = 7, RULE_expr = 8;
	public static final String[] ruleNames = {
		"program", "importDecl", "classDecl", "varDecl", "type", "methodDecl", 
		"param", "stmt", "expr"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'='", "';'", "'{'", "'}'", "'('", "')'", "'['", "']'", "'*'", "'+'", 
		"'-'", "'/'", "'&&'", "'<'", "'...'", "'class'", "'int'", "'String'", 
		"'boolean'", "'public'", "'if'", "'else'", "'while'", "'true'", "'false'", 
		"'this'", "'return'", "'!'", "'.'", "'length'", "','", "'new'", "'import'", 
		"'extends'", "'static'", "'void'", "'main'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "EQUALS", "SEMI", "LCURLY", "RCURLY", "LPAREN", "RPAREN", "LBRACKET", 
		"RBRACKET", "MUL", "ADD", "SUB", "DIV", "AND", "LESS", "VARARGS", "CLASS", 
		"INT", "STRING", "BOOLEAN", "PUBLIC", "IF", "ELSE", "WHILE", "TRUE", "FALSE", 
		"THIS", "RETURN", "NOT", "DOT", "LENGTH", "COMMA", "NEW", "IMPORT", "EXTENDS", 
		"STATIC", "VOID", "MAIN", "COMMENT", "MULTILINE_COMMENT", "INTEGER", "ID", 
		"WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Javamm.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public JavammParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public ClassDeclContext classDecl() {
			return getRuleContext(ClassDeclContext.class,0);
		}
		public TerminalNode EOF() { return getToken(JavammParser.EOF, 0); }
		public List<ImportDeclContext> importDecl() {
			return getRuleContexts(ImportDeclContext.class);
		}
		public ImportDeclContext importDecl(int i) {
			return getRuleContext(ImportDeclContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavammListener ) ((JavammListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavammListener ) ((JavammListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(21);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IMPORT) {
				{
				{
				setState(18);
				importDecl();
				}
				}
				setState(23);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(24);
			classDecl();
			setState(25);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportDeclContext extends ParserRuleContext {
		public Token ID;
		public List<Token> imports = new ArrayList<Token>();
		public TerminalNode IMPORT() { return getToken(JavammParser.IMPORT, 0); }
		public TerminalNode SEMI() { return getToken(JavammParser.SEMI, 0); }
		public List<TerminalNode> ID() { return getTokens(JavammParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(JavammParser.ID, i);
		}
		public List<TerminalNode> DOT() { return getTokens(JavammParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(JavammParser.DOT, i);
		}
		public ImportDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavammListener ) ((JavammListener)listener).enterImportDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavammListener ) ((JavammListener)listener).exitImportDecl(this);
		}
	}

	public final ImportDeclContext importDecl() throws RecognitionException {
		ImportDeclContext _localctx = new ImportDeclContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_importDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(27);
			match(IMPORT);
			setState(28);
			((ImportDeclContext)_localctx).ID = match(ID);
			((ImportDeclContext)_localctx).imports.add(((ImportDeclContext)_localctx).ID);
			setState(33);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DOT) {
				{
				{
				setState(29);
				match(DOT);
				setState(30);
				((ImportDeclContext)_localctx).ID = match(ID);
				((ImportDeclContext)_localctx).imports.add(((ImportDeclContext)_localctx).ID);
				}
				}
				setState(35);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(36);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassDeclContext extends ParserRuleContext {
		public Token name;
		public Token parent;
		public TerminalNode CLASS() { return getToken(JavammParser.CLASS, 0); }
		public TerminalNode LCURLY() { return getToken(JavammParser.LCURLY, 0); }
		public TerminalNode RCURLY() { return getToken(JavammParser.RCURLY, 0); }
		public List<TerminalNode> ID() { return getTokens(JavammParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(JavammParser.ID, i);
		}
		public TerminalNode EXTENDS() { return getToken(JavammParser.EXTENDS, 0); }
		public List<VarDeclContext> varDecl() {
			return getRuleContexts(VarDeclContext.class);
		}
		public VarDeclContext varDecl(int i) {
			return getRuleContext(VarDeclContext.class,i);
		}
		public List<MethodDeclContext> methodDecl() {
			return getRuleContexts(MethodDeclContext.class);
		}
		public MethodDeclContext methodDecl(int i) {
			return getRuleContext(MethodDeclContext.class,i);
		}
		public ClassDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavammListener ) ((JavammListener)listener).enterClassDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavammListener ) ((JavammListener)listener).exitClassDecl(this);
		}
	}

	public final ClassDeclContext classDecl() throws RecognitionException {
		ClassDeclContext _localctx = new ClassDeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_classDecl);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			match(CLASS);
			setState(39);
			((ClassDeclContext)_localctx).name = match(ID);
			setState(42);
			_la = _input.LA(1);
			if (_la==EXTENDS) {
				{
				setState(40);
				match(EXTENDS);
				setState(41);
				((ClassDeclContext)_localctx).parent = match(ID);
				}
			}

			setState(44);
			match(LCURLY);
			setState(48);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(45);
					varDecl();
					}
					} 
				}
				setState(50);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			setState(54);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << STRING) | (1L << BOOLEAN) | (1L << PUBLIC) | (1L << STATIC) | (1L << ID))) != 0)) {
				{
				{
				setState(51);
				methodDecl();
				}
				}
				setState(56);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(57);
			match(RCURLY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDeclContext extends ParserRuleContext {
		public Token name;
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(JavammParser.SEMI, 0); }
		public TerminalNode ID() { return getToken(JavammParser.ID, 0); }
		public TerminalNode MAIN() { return getToken(JavammParser.MAIN, 0); }
		public TerminalNode LENGTH() { return getToken(JavammParser.LENGTH, 0); }
		public TerminalNode STRING() { return getToken(JavammParser.STRING, 0); }
		public VarDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavammListener ) ((JavammListener)listener).enterVarDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavammListener ) ((JavammListener)listener).exitVarDecl(this);
		}
	}

	public final VarDeclContext varDecl() throws RecognitionException {
		VarDeclContext _localctx = new VarDeclContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_varDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			type();
			setState(60);
			((VarDeclContext)_localctx).name = _input.LT(1);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << STRING) | (1L << LENGTH) | (1L << MAIN) | (1L << ID))) != 0)) ) {
				((VarDeclContext)_localctx).name = (Token)_errHandler.recoverInline(this);
			} else {
				consume();
			}
			setState(61);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public boolean isArray = false;
		public Token name;
		public Token vararg;
		public TerminalNode LBRACKET() { return getToken(JavammParser.LBRACKET, 0); }
		public TerminalNode RBRACKET() { return getToken(JavammParser.RBRACKET, 0); }
		public TerminalNode INT() { return getToken(JavammParser.INT, 0); }
		public TerminalNode VARARGS() { return getToken(JavammParser.VARARGS, 0); }
		public TerminalNode BOOLEAN() { return getToken(JavammParser.BOOLEAN, 0); }
		public TerminalNode STRING() { return getToken(JavammParser.STRING, 0); }
		public TerminalNode ID() { return getToken(JavammParser.ID, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavammListener ) ((JavammListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavammListener ) ((JavammListener)listener).exitType(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_type);
		try {
			setState(74);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(63);
				((TypeContext)_localctx).name = match(INT);
				setState(64);
				match(LBRACKET);
				setState(65);
				match(RBRACKET);
				((TypeContext)_localctx).isArray =  true;
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(67);
				((TypeContext)_localctx).name = match(INT);
				setState(68);
				((TypeContext)_localctx).vararg = match(VARARGS);
				((TypeContext)_localctx).isArray =  true;
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(70);
				((TypeContext)_localctx).name = match(INT);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(71);
				((TypeContext)_localctx).name = match(BOOLEAN);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(72);
				((TypeContext)_localctx).name = match(STRING);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(73);
				((TypeContext)_localctx).name = match(ID);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethodDeclContext extends ParserRuleContext {
		public boolean isPublic = false;
		public boolean isMain = false;
		public Token name;
		public Token v;
		public Token args;
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(JavammParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(JavammParser.RPAREN, 0); }
		public TerminalNode LCURLY() { return getToken(JavammParser.LCURLY, 0); }
		public TerminalNode RCURLY() { return getToken(JavammParser.RCURLY, 0); }
		public TerminalNode ID() { return getToken(JavammParser.ID, 0); }
		public TerminalNode PUBLIC() { return getToken(JavammParser.PUBLIC, 0); }
		public List<ParamContext> param() {
			return getRuleContexts(ParamContext.class);
		}
		public ParamContext param(int i) {
			return getRuleContext(ParamContext.class,i);
		}
		public List<VarDeclContext> varDecl() {
			return getRuleContexts(VarDeclContext.class);
		}
		public VarDeclContext varDecl(int i) {
			return getRuleContext(VarDeclContext.class,i);
		}
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(JavammParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(JavammParser.COMMA, i);
		}
		public TerminalNode STATIC() { return getToken(JavammParser.STATIC, 0); }
		public TerminalNode STRING() { return getToken(JavammParser.STRING, 0); }
		public TerminalNode LBRACKET() { return getToken(JavammParser.LBRACKET, 0); }
		public TerminalNode RBRACKET() { return getToken(JavammParser.RBRACKET, 0); }
		public TerminalNode VOID() { return getToken(JavammParser.VOID, 0); }
		public TerminalNode MAIN() { return getToken(JavammParser.MAIN, 0); }
		public MethodDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_methodDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavammListener ) ((JavammListener)listener).enterMethodDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavammListener ) ((JavammListener)listener).exitMethodDecl(this);
		}
	}

	public final MethodDeclContext methodDecl() throws RecognitionException {
		MethodDeclContext _localctx = new MethodDeclContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_methodDecl);
		int _la;
		try {
			int _alt;
			setState(137);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(78);
				_la = _input.LA(1);
				if (_la==PUBLIC) {
					{
					setState(76);
					match(PUBLIC);
					((MethodDeclContext)_localctx).isPublic = true;
					}
				}

				setState(80);
				type();
				setState(81);
				((MethodDeclContext)_localctx).name = match(ID);
				setState(82);
				match(LPAREN);
				setState(91);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << STRING) | (1L << BOOLEAN) | (1L << ID))) != 0)) {
					{
					setState(83);
					param();
					setState(88);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==COMMA) {
						{
						{
						setState(84);
						match(COMMA);
						setState(85);
						param();
						}
						}
						setState(90);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
				}

				setState(93);
				match(RPAREN);
				setState(94);
				match(LCURLY);
				setState(98);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(95);
						varDecl();
						}
						} 
					}
					setState(100);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
				}
				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LCURLY) | (1L << LPAREN) | (1L << LBRACKET) | (1L << BOOLEAN) | (1L << IF) | (1L << WHILE) | (1L << TRUE) | (1L << FALSE) | (1L << THIS) | (1L << RETURN) | (1L << NOT) | (1L << NEW) | (1L << INTEGER) | (1L << ID))) != 0)) {
					{
					{
					setState(101);
					stmt();
					}
					}
					setState(106);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(107);
				match(RCURLY);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(111);
				_la = _input.LA(1);
				if (_la==PUBLIC) {
					{
					setState(109);
					match(PUBLIC);
					((MethodDeclContext)_localctx).isPublic = true;
					}
				}

				setState(113);
				match(STATIC);
				setState(114);
				((MethodDeclContext)_localctx).v = match(VOID);
				setState(115);
				((MethodDeclContext)_localctx).name = match(MAIN);
				((MethodDeclContext)_localctx).isMain = true;
				setState(117);
				match(LPAREN);
				setState(118);
				match(STRING);
				setState(119);
				match(LBRACKET);
				setState(120);
				match(RBRACKET);
				setState(121);
				((MethodDeclContext)_localctx).args = match(ID);
				setState(122);
				match(RPAREN);
				setState(123);
				match(LCURLY);
				setState(127);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(124);
						varDecl();
						}
						} 
					}
					setState(129);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
				}
				setState(133);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LCURLY) | (1L << LPAREN) | (1L << LBRACKET) | (1L << BOOLEAN) | (1L << IF) | (1L << WHILE) | (1L << TRUE) | (1L << FALSE) | (1L << THIS) | (1L << RETURN) | (1L << NOT) | (1L << NEW) | (1L << INTEGER) | (1L << ID))) != 0)) {
					{
					{
					setState(130);
					stmt();
					}
					}
					setState(135);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(136);
				match(RCURLY);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamContext extends ParserRuleContext {
		public Token name;
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(JavammParser.ID, 0); }
		public ParamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavammListener ) ((JavammListener)listener).enterParam(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavammListener ) ((JavammListener)listener).exitParam(this);
		}
	}

	public final ParamContext param() throws RecognitionException {
		ParamContext _localctx = new ParamContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_param);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			type();
			setState(140);
			((ParamContext)_localctx).name = match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
